Пофикшены эндпоинты и добавлено подключение к БД на Neon
